--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sergeygalkin
 
 # Build settings
-theme: just-the-docs
+theme: dinky
 plugins:
   - jekyll-feed
 
