--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sergeygalkin
 
 # Build settings
-theme: dinky
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
 
 # Exclude from processing.
