--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  sergeygalkin
 
 # Build settings
-remote_theme: pages-themes/hacker@v0.2.0
+# theme: jekyll-theme-hacker
+theme: minima
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
