--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ plugins:
   - jekyll-gist
   - jemoji
 
-
+google_analytics: "G-Z5MR5322PH"
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
