Switch to automatic build

--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,10 @@
-baseurl = "/"
+baseurl = "https://https://sergeygalkin.github.io//"
 languageCode = "ru-ru"
 theme = "terminal"
 paginate = 5
 defaultContentLanguage = "ru"
 googleAnalytics = 'G-Z5MR5322PH'
-publishDir = "docs"
+# publishDir = "docs"
 
 [params]
   # dir name of your main content (default is `content/posts`).
@@ -67,8 +67,8 @@ publishDir = "docs"
   [languages.ru]
     languageName = "Русский"
     title = "Всякое"
-    subtitle = "A simple, retro theme for Hugo"
-    owner = ""
+    subtitle = "Всякая всячина от DevOps инженера"
+    owner = "sergeygals"
     keywords = ""
     copyright = ""
     menuMore = "Показать больше"
