Switch to automatic build

--- a/config.toml
+++ b/config.toml
@@ -68,7 +68,7 @@ googleAnalytics = 'G-Z5MR5322PH'
     languageName = "Русский"
     title = "Всякое"
     subtitle = "Всякая всячина от DevOps инженера"
-    owner = "sergeygals"
+    owner = ""
     keywords = ""
     copyright = ""
     menuMore = "Показать больше"
