--- a/config.toml
+++ b/config.toml
@@ -76,7 +76,11 @@ googleAnalytics = 'G-Z5MR5322PH'
     readOtherPosts = "Читать другие посты"
     newerPosts = "Новые посты"
     olderPosts = "Старые посты"
-    missingContentMessage = "Страница не найдена..."
+    missingContentMessage = """
+      Страница не найдена... 
+      Если вы зашли на линку на https://blog.sgalkin.info/, то,
+      скорее всего, пост не был перенесен при перезде на hugo как потерявший актуальность
+    """
     missingBackButtonLabel = "Назад на домашнюю страницу"
 
     [languages.ru.params.logo]
