--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,8 @@ googleAnalytics = 'G-Z5MR5322PH'
     missingContentMessage = """
       Страница не найдена...
       Если вы заходили на https://blog.sgalkin.info/, то,
-      скорее всего, пост не был перенесен при перезде на hugo как потерявший актуальность
+      скорее всего, пост не был перенесен при перезде на hugo/github pages 
+      как потерявший актуальность
     """
     missingBackButtonLabel = "Назад на домашнюю страницу"
 
